clusters/aks-dev-elemam-02/workloads/services/kubernetes-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
spec:
  type: LoadBalancer
  selector:
    k8s-app: kubernetes-dashboard
  ports:
    - port: 443
      targetPort: 9090
